test/files/neg/illegal-stmt-start.scala
class Test {
  def foo {
    private def bar {}
  }
}