test/files/neg/illegal-stmt-start.check
illegal-stmt-start.scala:3: error: illegal start of statement (no modifiers allowed here)
    private def bar {}
    ^
one error found
